feat: queen V3 architecture